# tech-lab

./: .gitignore  README.md
Grammer-sol/: README.md
Grammer-sol/src/: 01_DataTypes.sol  02_Functions.sol  03_Interface.sol  04_Inheritance.sol  05_Modifier.sol  06_Storage.sol  07_Payable.sol  08_Events.sol
USDC/: foundry.toml
USDC/src/: USDCEscrow.sol
USDC/test/: USDCEscrow.t.sol
USDC/test/mocks/: MockERC20.sol
drawengine/: Cargo.toml
drawengine/crates/drawengine-core/: Cargo.toml
drawengine/crates/drawengine-core/src/: brush.rs  canvas.rs  eraser.rs  geometry.rs  history.rs  layer.rs  lib.rs  point.rs  render.rs  serialization.rs  stroke.rs  transform.rs
drawengine/crates/drawengine-ffi/: Cargo.toml  uniffi.toml
drawengine/crates/drawengine-ffi/src/: callbacks.rs  engine.rs  lib.rs  types.rs
drawengine/ios/: setup.sh
drawengine/ios/DrawExample/DrawExample/: AppDelegate.swift  SceneDelegate.swift
drawengine/ios/DrawExample/DrawExample.xcodeproj/: project.pbxproj
drawengine/ios/DrawExample/DrawExample/Canvas/: CanvasView.swift  CanvasViewController.swift  RenderCommandProcessor.swift
drawengine/ios/DrawExample/DrawExample/Persistence/: DocumentManager.swift
drawengine/ios/DrawExample/DrawExample/Toolbar/: ToolbarView.swift
drawengine/ios/DrawExample/DrawExampleTests/: DrawExampleTests.swift
drawengine/ios/DrawExample/DrawExampleUITests/: DrawExampleUITests.swift  DrawExampleUITestsLaunchTests.swift
drawengine/scripts/: build-android.sh  build-ios.sh
http-live-streaming/: README.md
