[workspace]
members = [
    "crates/drawengine-core",
    "crates/drawengine-ffi",
    "crates/uniffi-bindgen",
]
resolver = "2"

[workspace.dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.28" }
